typescript/checker/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList9.ts.stderr
error: Expected RParen, got Some(QuestionMark)
 --> $DIR/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList9.ts:2:14
  |
2 |    foo(...bar?) { }
  |              ^

